<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    tools:context=".ui.fragments.recipes.bottomsheet.RecipesBottomSheet">


    <TextView
        android:id="@+id/mealType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:text="@string/meal_type"
        android:textStyle="bold"
        android:textColor="@color/dark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <HorizontalScrollView
        android:id="@+id/mealType_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealType_txt">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/mealType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@+id/main_course_chip">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/main_course_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_course"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/side_dish_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/side_dish"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/dessert_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dessert"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/appetizer_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/appetizer"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/salad_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/salad"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/bread_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Bread"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/breakfast_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Breakfast"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/soup_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Soup"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/beverage_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Beverage"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/sauce_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Sauce"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/marinade_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Marinade"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/finger_food_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Finger Food"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/snack_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Snack"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/drink_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Drink"/>
            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/dietType_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:text="@string/diet_type"
        android:textColor="@color/dark"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mealType_scrollView" />

    <HorizontalScrollView
        android:id="@+id/dietType_scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietType_txt"
        >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal" >


            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dietType_chipGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true"
                app:checkedChip="@+id/gluten_free_chip">

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/gluten_free_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Gluten Free"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/katogenic_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Ketogenic"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/vegetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vegetarian"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/vegan_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Vegan"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/pescetarian_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pescetarian"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/paleo_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Paleo"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/primal_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Primal"/>

                <com.google.android.material.chip.Chip
                    style="@style/CustomChipStyle"
                    android:id="@+id/whole30_chip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Whole30"/>

            </com.google.android.material.chip.ChipGroup>
        </LinearLayout>
    </HorizontalScrollView>

    <Button
        android:id="@+id/apply_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/apply"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dietType_scrollView" />
</androidx.constraintlayout.widget.ConstraintLayout>